--- a/index.html
+++ b/index.html
@@ -1,108 +1,177 @@
 <!DOCTYPE html>
 <html lang="vi">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chúc Mừng 14/12 🎉</title>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>14/2 💖</title>
 
-    <style>
-        * {
-            box-sizing: border-box;
-        }
+<style>
+*{box-sizing:border-box;margin:0;padding:0;}
 
-        body {
-            margin: 0;
-            padding: 20px;
-            min-height: 100vh;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
-            font-family: Arial, sans-serif;
-            text-align: center;
-        }
+body{
+    min-height:100vh;
+    display:flex;
+    justify-content:center;
+    align-items:center;
+    font-family:'Segoe UI', sans-serif;
+    background: radial-gradient(circle at top, #ff9a9e, #fad0c4, #fbc2eb);
+    overflow:hidden;
+    text-align:center;
+    padding:20px;
+}
 
-        .card {
-            background: white;
-            width: 100%;
-            max-width: 400px;
-            padding: 30px 20px;
-            border-radius: 20px;
-            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
-            animation: fadeIn 1.5s ease-in-out;
-        }
+.card{
+    background: rgba(255,255,255,0.95);
+    padding:30px 20px;
+    border-radius:25px;
+    max-width:400px;
+    width:100%;
+    box-shadow:0 15px 40px rgba(0,0,0,0.2);
+    z-index:2;
+}
 
-        h1 {
-            color: #ff4b5c;
-            font-size: 24px;
-            margin-bottom: 15px;
-        }
+h1{color:#ff3e6c;font-size:24px;margin-bottom:15px;}
+p{color:#555;font-size:16px;line-height:1.5;}
 
-        p {
-            font-size: 16px;
-            color: #555;
-            line-height: 1.5;
-        }
+button{
+    margin-top:20px;
+    padding:12px;
+    width:100%;
+    border:none;
+    border-radius:15px;
+    background:#ff3e6c;
+    color:white;
+    font-size:16px;
+    cursor:pointer;
+}
 
-        button {
-            margin-top: 20px;
-            padding: 12px 20px;
-            border: none;
-            border-radius: 12px;
-            background-color: #ff4b5c;
-            color: white;
-            font-size: 16px;
-            width: 100%;
-            cursor: pointer;
-            transition: 0.3s;
-        }
+#extraMessage{
+    display:none;
+    margin-top:15px;
+    font-weight:bold;
+    color:#ff3e6c;
+}
 
-        button:active {
-            transform: scale(0.95);
-        }
+/* Hearts */
+.heart{
+    position:fixed;
+    bottom:-10px;
+    animation: floatUp 4s linear forwards;
+}
 
-        button:hover {
-            background-color: #e63e50;
-        }
+@keyframes floatUp{
+    0%{transform:translateY(0);opacity:1;}
+    100%{transform:translateY(-100vh);opacity:0;}
+}
 
-        #extraMessage {
-            display: none;
-            margin-top: 15px;
-            font-weight: bold;
-            color: #ff4b5c;
-        }
-
-        @keyframes fadeIn {
-            from { opacity: 0; transform: translateY(20px);}
-            to { opacity: 1; transform: translateY(0);}
-        }
-
-        /* Responsive thêm cho màn hình nhỏ */
-        @media (max-width: 400px) {
-            h1 {
-                font-size: 20px;
-            }
-            p {
-                font-size: 14px;
-            }
-        }
-    </style>
+/* Fireworks canvas */
+canvas{
+    position:fixed;
+    top:0;
+    left:0;
+    pointer-events:none;
+}
+</style>
 </head>
 
 <body>
-    <div class="card">
-        <h1>🎉 Chúc Mừng Ngày 14/2 🎉</h1>
-        <p>Chúc pé mèo Hạnh một ngày thật vui vẻ, hạnh phúc và tràn đầy yêu thương 💖</p>
-        <button onclick="showMessage()">Nhấn vào đây ❤️</button>
-        <p id="extraMessage">
-            Mãi luôn xinh đẹp và thành công nhé! 🌟 <br/> from Thiện ^^
-        </p>
-    </div>
 
-    <script>
-        function showMessage() {
-            document.getElementById("extraMessage").style.display = "block";
+<canvas id="fireworks"></canvas>
+
+<div class="card">
+    <h1>💖 Chúc Mừng Ngày 14/2 💖</h1>
+    <p>
+        Chúc pé mèo Hạnh một ngày thật vui vẻ,  
+        hạnh phúc và tràn đầy yêu thương 💖
+    </p>
+
+    <button onclick="startLove()">Nhấn vào đây ❤️</button>
+
+    <p id="extraMessage">
+        Mãi luôn xinh đẹp và thành công nhé! 🌟 <br/>
+        From Thiện ^^ 💌
+    </p>
+</div>
+
+<!-- Nhạc (ẩn, chỉ phát khi bấm nút) -->
+<audio id="bgMusic">
+    <source src="What Makes You Beautiful.mp3" type="audio/mpeg">
+</audio>
+
+<script>
+function startLove(){
+
+    // Hiện lời chúc
+    document.getElementById("extraMessage").style.display="block";
+
+    // Phát nhạc (bắt buộc phải sau khi bấm nút)
+    const music=document.getElementById("bgMusic");
+    music.play();
+
+    // Tim bay
+    setInterval(()=>{
+        const heart=document.createElement("div");
+        heart.className="heart";
+        heart.innerHTML="💖";
+        heart.style.left=Math.random()*100+"vw";
+        heart.style.fontSize=(15+Math.random()*25)+"px";
+        document.body.appendChild(heart);
+        setTimeout(()=>heart.remove(),4000);
+    },300);
+
+    // Pháo hoa
+    launchFireworks();
+}
+
+/* Fireworks */
+const canvas=document.getElementById("fireworks");
+const ctx=canvas.getContext("2d");
+canvas.width=window.innerWidth;
+canvas.height=window.innerHeight;
+
+function launchFireworks(){
+    for(let i=0;i<6;i++){
+        setTimeout(()=>explode(),i*400);
+    }
+}
+
+function explode(){
+    const x=Math.random()*canvas.width;
+    const y=Math.random()*canvas.height/2;
+
+    for(let i=0;i<60;i++){
+        const angle=Math.random()*2*Math.PI;
+        const speed=Math.random()*5+2;
+
+        let p={
+            x:x,
+            y:y,
+            vx:Math.cos(angle)*speed,
+            vy:Math.sin(angle)*speed,
+            alpha:1
+        };
+
+        animate(p);
+    }
+}
+
+function animate(p){
+    const interval=setInterval(()=>{
+        p.x+=p.vx;
+        p.y+=p.vy;
+        p.alpha-=0.02;
+
+        ctx.fillStyle="rgba(255,0,150,"+p.alpha+")";
+        ctx.beginPath();
+        ctx.arc(p.x,p.y,3,0,2*Math.PI);
+        ctx.fill();
+
+        if(p.alpha<=0){
+            clearInterval(interval);
         }
-    </script>
+    },20);
+}
+</script>
+
 </body>
 </html>
