--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@ canvas{
         hạnh phúc và tràn đầy yêu thương 💖
     </p>
 
-    <button onclick="startLove()">Nhấn vào đây để lấy hoa ❤️</button>
+    <button onclick="startLove()">Nhấn vào đây ❤️</button>
 
     <p id="extraMessage">
         Mãi luôn xinh đẹp và thành công nhé! 🌟 <br>
